fix: form toast header z-index

--- a/public/assets/styles/output.css
+++ b/public/assets/styles/output.css
@@ -584,6 +584,10 @@ video {
   left: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -596,16 +600,8 @@ video {
   right: 0.5rem;
 }
 
-.right-28 {
-  right: 7rem;
-}
-
 .right-5 {
   right: 1.25rem;
-}
-
-.right-80 {
-  right: 20rem;
 }
 
 .top-0 {
@@ -626,6 +622,10 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .z-50 {
@@ -811,6 +811,11 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-x-full {
